# advent-of-code-2022

./: advent-of-code-2022.cabal  day1.hs
day1/: day1-test-input  day1.cabal
day1/app/: Day1.hs
day2/: day2.cabal
day2/app/: Day2.hs
day3/: day3.cabal
day3/app/: Day3-1.hs  Day3-2.hs
day4/: day4.cabal
day4/app/: day4-1.hs  day4-2.hs
day5/app/: day5-1.hs
