cabal-version:      2.4
name:               day3
version:            0.1.0.0
author:             Tobias Linton
maintainer:         tobias.linton@edgeware.tv

executable day3-1
    main-is:          Day3-1.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable day3-2
    main-is:          Day3-2.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
