cabal-version:      2.4
name:               day3
version:            0.1.0.0
author:             Tobias Linton
maintainer:         tobias.linton@edgeware.tv

executable day4-1
    main-is:          day4-1.hs
    build-depends:    base ^>=4.16.3.0, parsec == 3.1.15.1
    hs-source-dirs:   app
    default-language: Haskell2010

executable day4-2
    main-is:          day4-2.hs
    build-depends:    base ^>=4.16.3.0, parsec == 3.1.15.1
    hs-source-dirs:   app
    default-language: Haskell2010
